# iris

./: .env.example  .gitignore  README.md  justfile
.github/workflows-disabled/: ci.yml
backend/: go.mod  go.sum
backend/cmd/api/: main.go
backend/cmd/conformance/: main.go
backend/cmd/media-worker/: main.go
backend/cmd/mock-bfl/: main.go
backend/cmd/mock-elevenlabs/: main.go
backend/dev/: mock-whisper
backend/migrations/: 0001_init.sql  0002_pending_uploads.sql  0003_media_jobs.sql  0004_generation_indexes.sql  0005_shot_view_detach.sql  0006_canvases.sql  0007_timelines.sql  0008_generation_cache.sql  0009_character_voice.sql  0010_exports.sql  0011_transcriptions.sql  0012_remote_handle.sql  0013_upload_tags.sql
deploy/: docker-compose.dev.yml  mock-model.Dockerfile
deploy/lama/: Dockerfile  app.py  entrypoint.sh
deploy/sam/: Dockerfile  app.py  entrypoint.sh
docs/design/: 01-high-level-design.md  02-ui-ux-design.md  03-technical-design.md  04-implementation-plan.md  05-ux-interaction-audit.md  05-ux-review-2026-07-shell-and-image.md
docs/research/: 2026-07-generation-api-integration.md  2026-07-market-and-model-landscape.md
engine/: Cargo.toml
engine/engine-core/: Cargo.toml
engine/engine-core/src/: lib.rs
proto/: buf.gen.yaml
spec/: inference-api.md  manifest.schema.json
spec/timeline-vectors/: basic.json  captions.json  colors.json  dedup-undo-edges.json  moves-trims.json  speech.json  transitions.json  undo-redo.json
tools/golden/: golden.mjs  package-lock.json  package.json
web/: package.json  pnpm-lock.yaml
(+107 files in other folders)
